Changes for Crypt::SRP


0.006   2013/04/11
        - ($s, $v)=compute_verifier_and_salt >>> ($v,$s)=compute_verifier_and_salt

0.005   2013/04/10
        - added reset(), dump(), load(), server_fake_B_s()
        - server_init() and client_init() now return $self
        - removed validate_A_or_B
        - added server_verify_A() + client_verify_B()
        - we support $self->random_bytes and Crypt::SRP->random_bytes
        - new's param $format + $default_salt_len

0.004   2013/04/08
        - fixed bug in _calc_K
        - new's param $interleaved
        - documentation fixes

0.003   2013/04/05
        - no dependency on Digest::SHA1
        - compatibility with Math::BigInt 1.991
        - more reliable sample implementation of client/server
        - ready for CPAN

0.002   2013/04/05
        - sample srp_client.pl + srp_server.pl (+ necessary changes)

0.001   2013/04/04
        - initial version