@@ -1,8 +1,11 @@
 Changes for Crypt::SRP
 
-
 0.006   2013/04/11
-        - ($s, $v)=compute_verifier_and_salt >>> ($v,$s)=compute_verifier_and_salt
+        - ($s, $v)=compute_verifier_and_salt
+          >>> ($v,$s)=compute_verifier_and_salt
+        - new($group, $hash, $format, $interleaved, $default_salt_len)
+          >>> new($group, $hash, $format, $default_salt_len, $interleaved)
+        - added server_client.t
 
 0.005   2013/04/10
         - added reset(), dump(), load(), server_fake_B_s()
